github_data_collector/src/data/issue_comment/vlfeat_vlfeat.txt
In file `/vl/mser.c` line 558-559 the height of the two trees (`r[r_idx]` and `r[nr_idx]`) is determined before the two roots are computed (`climb(...)`).

I think this should be done after the two `climb(...)` statements.

So this should be reordered to:
```
        /*
          Now we join the two subtrees rooted at
           R_IDX = ROOT(  IDX)
          NR_IDX = ROOT(N_IDX).
          Note that R_IDX = ROOT(IDX) might change as we process more
          neighbors, so we need keep updating it.
        */

         r_idx = climb(r,   idx) ;
        nr_idx = climb(r, n_idx) ;

        int hgt   = r [ r_idx] .height ;
        int n_hgt = r [nr_idx] .height ;

```
As far as I can tell they are not doing anything.
According to this http://davis.lbl.gov/Manuals/NETPBM/doc/pgm.html `max_value` should be less then `65536`, but in code we have:
```
pgm.c
...
if(! (max_value >= 65536)) {
    return vl_set_last_error(VL_ERR_PGM_INV_META, "Invalid PGM meta information");
}
```
As result all valid pgm images considered as incorrect.

Hello,

I tried to install the toolbox on MATLAB R2016b on my mac running on MacOS Mojave. I downloaded the package and moved it to toolbok. 

I ran 

run /Applications/MATLAB_R2016b.app/toolbox/vlfeat-0.9.21/toolbox/vl_setup.m

but get the following Warning : 
Warning: Name is nonexistent or not a directory:
/Applications/MATLAB_R2016b.app/toolbox/vlfeat-0.9.21/toolbox/mex/mexmaci64 

there is indeed no files there and the folder mex does not exist. 

Any idea how to install this package?

Thanks

Rémi
There are tons of open issues and tons of pull requersts, that fix critical bugs. Do something!
```c
$ gcc9 -fopenmp -c vl/kmeans.c
In file included from vl/kmeans.h:21,
                 from vl/kmeans.c:363:
vl/kmeans.c: In function '_vl_kmeans_quantize_f':
vl/mathop.h:92:37: error: 'vl_infinity_d' not specified in enclosing 'parallel'
   92 | #define VL_INFINITY_D (vl_infinity_d.value)
      |                       ~~~~~~~~~~~~~~^~~~~~~
vl/kmeans.c:685:34: note: in expansion of macro 'VL_INFINITY_D'
  685 |       TYPE bestDistance = (TYPE) VL_INFINITY_D ;
      |                                  ^~~~~~~~~~~~~
In file included from vl/kmeans.c:1782:
vl/kmeans.c:672:9: error: enclosing 'parallel'
  672 | #pragma omp parallel default(none) \
      |         ^~~
In file included from vl/kmeans.c:1788:
vl/kmeans.c: In function '_vl_kmeans_quantize_d':
vl/kmeans.c:685:27: error: 'vl_infinity_d' not specified in enclosing 'parallel'
  685 |       TYPE bestDistance = (TYPE) VL_INFINITY_D ;
vl/kmeans.c:672:9: error: enclosing 'parallel'
  672 | #pragma omp parallel default(none) \
      |         ^~~
```
https://gcc.gnu.org/gcc-9/porting_to.html#ompdatasharing
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=925853

Any chance for updating the lib?
It compiles the code in VS2019:
- hello world works
- sift.exe, after some compatiblity changes compiles as well, but crashes during IO (reading file) with unhandled exception (invalid paramaters) from ucrtbase.dll - according to stackexchange it is a VS version issue.

best
Przemek
 

There are options to build VLFEAT for Windows with Matlab, or Unix with Octave, or Unix for Matlab, but not Windows for Octave.
